# slackevent-responder

./: .bandit  .coveragerc  .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml
.github/workflows/: test.yml  test_master.yml  test_other.yml
example/: __init__.py  example.py  requirements.txt
src/slackevent_responder/: __init__.py  application.py
tests/: __init__.py  conftest.py  test_application.py  test_slack_event_app.py
tests/data/: reaction_added.json  url_challenge.json
tests/helpers/: helpers.py
